@@ -1,3 +1,4 @@
+Removed unused code for skipping java.library.path modification
 # 0.00.06 (53639) Jun 30, 2011
 Feasibility test for skipping java.library.path modification
 # 0.00.05 (53630) Jun 30, 2011
